--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Вспоминаем когда родился Юрец</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="input_wrap">
+    <div class="input_wrap container">
         <input type="text" class="input_date" placeholder="Когда у Юрца ДР??">
         <button class="btn">Ок</button>
         <p class="text"></p>
